<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="DUT_STRUCT_C000001_DEV" Id="{6760ee26-1ac7-42ec-9b28-e44946264023}">
    <Declaration><![CDATA[TYPE DUT_STRUCT_C000001_DEV :
STRUCT
	sCellName			:STRING := 'C000001';
	sIpAddress			:STRING := '';
	sAmsNetId			:STRING := '';
	sOpcUaURL			:STRING := 'opc.tcp://:4840';
	sStation1			:STRING := 'S000008';
	sStation2			:STRING := 'S000009';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>